// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diffRenderedHtml > diff > attribute is missing 1`] = `
"@@ -1,1 +1,1 @@
-<button disabled="">Hello</button>
\\ No newline at end of file
+<button>Hello</button>
\\ No newline at end of file
"
`;

exports[`diffRenderedHtml > diff > child is missing 1`] = `
"@@ -1,1 +1,1 @@
-<div>Hello</div>
\\ No newline at end of file
+<div><div>Hello</div></div>
\\ No newline at end of file
"
`;

exports[`diffRenderedHtml > diff > tag is different 1`] = `
"@@ -1,1 +1,1 @@
-<button>Hello</button>
\\ No newline at end of file
+<div>Hello</div>
\\ No newline at end of file
"
`;
